--- a/index.html
+++ b/index.html
@@ -174,25 +174,19 @@
       <h2 class="title-card center-align">Contactame</h2>
       <hr class="center-align">
       <div class="container ">
-        <div class="row">
-          <div class="col-s-12 col-m-4">
+        <div class="white hide-on-med-and-down">
+          <div class="col s6 m6 center-align">
             <a href="https://www.linkedin.com/in/leyla-ticze/" target="_blank">
               <img src="./img/link.jpg" alt="linkdln" class="responsive-img imgSkills">
             </a>
-          </div>
-          <div class="col-s-12 col-m-4">
             <a href="https://github.com/ticze" target="_blank">
               <img src="./img/github.jpg" alt="github" class="responsive-img imgSkills">
             </a>
-          </div>
-          <div class="col-s-12 col-m-4">
-            <img src="./img/gmail.png" alt="l.ticze@gmail.com" class="responsive-img imgSkills">
-            <span>l.ticze@gmail.com</span>
-          </div>
-          <div class="col-s-12 col-m-4">
+            <a href="mailto:l.ticze@gmail.com">
+              <img src="./img/gmail.png" alt="l.ticze@gmail.com" class="responsive-img imgSkills">
+            </a>
             <a href="https://drive.google.com/file/d/1utC13bOfN66PDgPLs2ESP5BrxTSveBsM/view" target="_blank">
-              Ver Curriculum-Vitae
-            <img src="./img/cv.png" alt="curriculumv-itae"  class="responsive-img imgSkills">
+              <img src="./img/cv.png" alt="curriculumv-itae" class="responsive-img imgSkills">
             </a>
           </div>
         </div>
