--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" href="./img/WhatsApp Image 2018-09-04 at 11.47.57 AM.jpeg" type="image/x-icon">
   <!--Import Google Icon Font-->
+  <link href="https://fonts.googleapis.com/css?family=Acme|Chicle|Kanit|Mali|Raleway" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -56,27 +57,28 @@
   </ul>
 
   <div class="main-container">
-    <section id="about-me" class=" section scrollspy">
-      <h2 class="title-card center-align">¿Quien Soy Yo?</h2>
+    <section id="about-me" class="section scrollspy">
+      <h2 class="title-card center-align">Soy Yo...</h2>
       <hr class="center-align">
-      <div class="row info_me">
-        <div class="col s10 m6 l3">
-          <img src="./img/Leyla Ticze .jpg" alt="leyla" class="responsive-img ft-me">
+      <div class="container">
+        <div class="row center-align">
+          <div class="col s10 m6 l3">
+            <img src="./img/Leyla Ticze .jpg" alt="leyla" class="responsive-img ft-me">
+          </div>
+          <div class="card-panel red lighten-2 white-text">
+            <spam class="center-align info">
+              Egresada de Laboratoria. Desarrolladora Front-End, con experiencia en metodologías ágiles. Automotivada y con deseos de seguir
+              aprendiendo y mejorando.
+              <br> Soy muy curiosa, con habilidad resolutiva, gran apertura a las nuevas ideas y a adaptarme a grupos con diversas
+              características.
+              <br> Trabajo con: Javascrip, HTML, CSS, Angular.
+            </spam>
+          </div>
+          <h1 class="ml12">LEYLA TICZE </h1>
         </div>
-        <div class="card-panel red lighten-2 white-text">
-          <spam class="center-align info">
-            Egresada de Laboratoria. Desarrolladora Front-End, con experiencia en metodologías ágiles. Automotivada y con deseos de seguir
-            aprendiendo y mejorando.
-            <br> Soy muy curiosa, con habilidad resolutiva, gran apertura a las nuevas ideas y a adaptarme a grupos con diversas
-            características.
-            <br> Trabajo con: Javascrip, HTML, CSS, Angular.
-          </spam>
-        </div>
-        <h1 class="ml12">LEYLA TICZE </h1>
       </div>
     </section>
-
-    <section id="projects" class=" section scrollspy">
+    <section id="projects" class="section scrollspy">
       <h2 class="title-card center-align">Proyectos</h2>
       <hr class="center-align">
       <div class="container">
@@ -147,8 +149,7 @@
         </div>
       </div>
     </section>
-
-    <section id="skills" class=" section scrollspy">
+    <section id="skills" class="section scrollspy">
       <h2 class="title-card center-align">Skills</h2>
       <hr class="center-align">
       <div class="container">
@@ -169,12 +170,11 @@
       </div>
 
     </section>
-
-    <section id="contact" class=" section scrollspy">
+    <section id="contact" class="section scrollspy">
       <h2 class="title-card center-align">Contactame</h2>
-      <hr class="center-align">
+      <hr class="white center-align">
       <div class="container ">
-        <div class="white hide-on-med-and-down">
+        <!-- <div class="white hide-on-med-and-down"> -->
           <div class="col s6 m6 center-align">
             <a href="https://www.linkedin.com/in/leyla-ticze/" target="_blank">
               <img src="./img/link.jpg" alt="linkdln" class="responsive-img imgSkills">
@@ -189,12 +189,12 @@
               <img src="./img/cv.png" alt="curriculumv-itae" class="responsive-img imgSkills">
             </a>
           </div>
-        </div>
+        <!-- </div> -->
       </div>
     </section>
   </div>
 
-  <div class=space></div>
+  <!-- <div class=space></div> -->
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
