typografia y color en contacto

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <div class="main-container">
     <section id="about-me" class="section scrollspy">
-      <h2 class="title-card center-align">Soy Yo...</h2>
+      <h1 class="ml12 center-align">LEYLA TICZE </h1>
       <hr class="center-align">
       <div class="container">
         <div class="row center-align">
@@ -74,7 +74,6 @@
               <br> Trabajo con: Javascrip, HTML, CSS, Angular.
             </spam>
           </div>
-          <h1 class="ml12">LEYLA TICZE </h1>
         </div>
       </div>
     </section>
@@ -171,19 +170,19 @@
 
     </section>
     <section id="contact" class="section scrollspy">
-      <h2 class="title-card center-align">Contactame</h2>
+      <h2 class="title-card center-align">Contáctame</h2>
       <hr class="white center-align">
       <div class="container ">
         <!-- <div class="white hide-on-med-and-down"> -->
           <div class="col s6 m6 center-align">
             <a href="https://www.linkedin.com/in/leyla-ticze/" target="_blank">
-              <img src="./img/link.jpg" alt="linkdln" class="responsive-img imgSkills">
+              <img src="./img/icons8-linkedin-90.png" alt="linkdln" class="responsive-img imgSkills">
             </a>
             <a href="https://github.com/ticze" target="_blank">
-              <img src="./img/github.jpg" alt="github" class="responsive-img imgSkills">
+              <img src="./img/icons8-github-90.png" alt="github" class="responsive-img imgSkills">
             </a>
             <a href="mailto:l.ticze@gmail.com">
-              <img src="./img/gmail.png" alt="l.ticze@gmail.com" class="responsive-img imgSkills">
+              <img src="./img/icons8-gmail-90.png" alt="l.ticze@gmail.com" class="responsive-img imgSkills">
             </a>
             <a href="https://drive.google.com/file/d/1utC13bOfN66PDgPLs2ESP5BrxTSveBsM/view" target="_blank">
               <img src="./img/cv.png" alt="curriculumv-itae" class="responsive-img imgSkills">
