correcciones en about me

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <div class="main-container">
     <section id="about-me" class="section scrollspy">
-      <h1 class="ml12 center-align">LEYLA TICZE </h1>
+      <h2 class=" title-card center-align "> Yo Soy....</h2>
       <hr class="center-align">
       <div class="container">
         <div class="row center-align">
@@ -66,8 +66,9 @@
             <img src="./img/Leyla Ticze .jpg" alt="leyla" class="responsive-img ft-me">
           </div>
           <div class="card-panel red lighten-2 white-text">
+            <h1 class="ml12 center-align">LEYLA TICZE </h1>
             <spam class="center-align info">
-              Egresada de Laboratoria. Desarrolladora Front-End, con experiencia en metodologías ágiles. Automotivada y con deseos de seguir
+              Egresada de Laboratoria.Front-end Developer, con experiencia en metodologías ágiles. Automotivada y con deseos de seguir
               aprendiendo y mejorando.
               <br> Soy muy curiosa, con habilidad resolutiva, gran apertura a las nuevas ideas y a adaptarme a grupos con diversas
               características.
@@ -174,26 +175,23 @@
       <hr class="white center-align">
       <div class="container ">
         <!-- <div class="white hide-on-med-and-down"> -->
-          <div class="col s6 m6 center-align">
-            <a href="https://www.linkedin.com/in/leyla-ticze/" target="_blank">
-              <img src="./img/icons8-linkedin-90.png" alt="linkdln" class="responsive-img imgSkills">
-            </a>
-            <a href="https://github.com/ticze" target="_blank">
-              <img src="./img/icons8-github-90.png" alt="github" class="responsive-img imgSkills">
-            </a>
-            <a href="mailto:l.ticze@gmail.com">
-              <img src="./img/icons8-gmail-90.png" alt="l.ticze@gmail.com" class="responsive-img imgSkills">
-            </a>
-            <a href="https://drive.google.com/file/d/1utC13bOfN66PDgPLs2ESP5BrxTSveBsM/view" target="_blank">
-              <img src="./img/cv.png" alt="curriculumv-itae" class="responsive-img imgSkills">
-            </a>
-          </div>
-        <!-- </div> -->
+        <div class="col s6 m6 center-align">
+          <a href="https://www.linkedin.com/in/leyla-ticze/" target="_blank">
+            <img src="./img/icons8-linkedin-90.png" alt="linkdln" class="responsive-img imgSkills">
+          </a>
+          <a href="https://github.com/ticze" target="_blank">
+            <img src="./img/icons8-github-90.png" alt="github" class="responsive-img imgSkills">
+          </a>
+          <a href="mailto:l.ticze@gmail.com">
+            <img src="./img/icons8-gmail-90.png" alt="l.ticze@gmail.com" class="responsive-img imgSkills">
+          </a>
+          <a href="https://drive.google.com/file/d/1pFAcLBT3ntlEygBvK9GGXcmIYGlnaRfZ/view" target="_blank">
+            <img src="./img/cv.png" alt="curriculumv-itae" class="responsive-img imgSkills">
+          </a>
+        </div>
       </div>
     </section>
   </div>
-
-  <!-- <div class=space></div> -->
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
