--- a/index.html
+++ b/index.html
@@ -57,104 +57,106 @@
   </ul>
 
   <div class="main-container">
+    <section id="ptcls">
+    </section>
     <section id="about-me" class="section scrollspy">
-      <h2 class=" title-card center-align "> Yo Soy....</h2>
-      <hr class="center-align">
       <div class="container">
+        <h2 class=" title-card center-align ">Sobre Mí</h2>
+        <hr class="center-align">
         <div class="row center-align">
-          <div class="col s10 m6 l3">
-            <img src="./img/Leyla Ticze .jpg" alt="leyla" class="responsive-img ft-me">
+          <div class="col s12">
+            <img src="./img/Leyla Ticze .jpg" alt="leyla" class="responsive-img col s12 m6 l3 ft-me">
+            <div class="card-panel red lighten-2 white-text">
+              <h1 class="ml12 center-align">LEYLA TICZE </h1>
+              <spam class="center-align info">
+                Egresada de Laboratoria.Front-end Developer, con experiencia en metodologías ágiles. Automotivada y con deseos de seguir
+                aprendiendo y mejorando.
+                <br> Soy muy curiosa, con habilidad resolutiva, gran apertura a las nuevas ideas y a adaptarme a grupos con diversas
+                características.
+                <br> Trabajo con: Javascrip, HTML, CSS, Angular.
+              </spam>
+            </div>
           </div>
-          <div class="card-panel red lighten-2 white-text">
-            <h1 class="ml12 center-align">LEYLA TICZE </h1>
-            <spam class="center-align info">
-              Egresada de Laboratoria.Front-end Developer, con experiencia en metodologías ágiles. Automotivada y con deseos de seguir
-              aprendiendo y mejorando.
-              <br> Soy muy curiosa, con habilidad resolutiva, gran apertura a las nuevas ideas y a adaptarme a grupos con diversas
-              características.
-              <br> Trabajo con: Javascrip, HTML, CSS, Angular.
-            </spam>
-          </div>
-        </div>
-      </div>
     </section>
     <section id="projects" class="section scrollspy">
-      <h2 class="title-card center-align">Proyectos</h2>
-      <hr class="center-align">
       <div class="container">
-        <div class="col-s-12 col-m-4">
-          <div class="card">
-            <div class="card-image waves-effect waves-block waves-light">
-              <img class="activator" src="img/data-dashboard.png">
-            </div>
-            <div class="card-content">
-              <span class="card-title activator grey-text text-darken-4">Data Dashboart
-                <i class="material-icons right">more_vert</i>
-              </span>
-            </div>
-            <div class="card-reveal">
-              <span class="card-title grey-text text-darken-4">Data Dashboart
-                <i class="material-icons right">cerrar</i>
-              </span>
-              <p>Data Dashboard se encarga conocer el progreso de las estudiantes mediante el uso de la api de Laboratoria.</p>
-              <p>
-                <a target="_blank" href="https://ticze.github.io/lim-2018-05-bc-core-am-datadashboard/src/">This is a link</a>
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-s-12 col-m-4">
-          <div class="card">
-            <div class="card-image waves-effect waves-block waves-light">
-              <img class="activator" src="img/haven.png">
-            </div>
-            <div class="card-content">
-              <span class="card-title activator grey-text text-darken-4">Haven
-                <i class="material-icons right">more_vert</i>
-              </span>
-            </div>
-            <div class="card-reveal">
-              <span class="card-title grey-text text-darken-4">Haven
-                <i class="material-icons right">cerrar</i>
-              </span>
-              <p>Haven es una red social creada y enfocada para la comunidad Feminista ; donde puedes crear y postear frases
-                , las cuales se les puede dar votos continuos .</p>
-              <p>
-                <a target="_blank" href="https://ticze.github.io/lim-2018-05-bc-core-am-socialnetwork/src/">This is a link</a>
-              </p>
+        <h2 class="title-card center-align">Proyectos</h2>
+        <hr class="center-align">
+        <div class="row">
+          <div class="col s12 m6 l4">
+            <div class="card">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="img/data-dashboard.png">
+              </div>
+              <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4">Data Dashboart
+                  <i class="material-icons right">more_vert</i>
+                </span>
+              </div>
+              <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4">Data Dashboart
+                  <i class="material-icons right">cerrar</i>
+                </span>
+                <p>Data Dashboard se encarga conocer el progreso de las estudiantes mediante el uso de la api de Laboratoria.</p>
+                <p>
+                  <a target="_blank" href="https://ticze.github.io/lim-2018-05-bc-core-am-datadashboard/src/">This is a link</a>
+                </p>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-s-12 col-m-4">
-          <div class="card">
-            <div class="card-image waves-effect waves-block waves-light">
-              <img class="activator" src="img/markdown.png">
+          <div class="col s12 m6 l4">
+            <div class="card">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="img/haven.png">
+              </div>
+              <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4">Haven
+                  <i class="material-icons right">more_vert</i>
+                </span>
+              </div>
+              <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4">Haven
+                  <i class="material-icons right">cerrar</i>
+                </span>
+                <p>Haven es una red social creada y enfocada para la comunidad Feminista ; donde puedes crear y postear frases
+                  , las cuales se les puede dar votos continuos .</p>
+                <p>
+                  <a target="_blank" href="https://ticze.github.io/lim-2018-05-bc-core-am-socialnetwork/src/">This is a link</a>
+                </p>
+              </div>
             </div>
-            <div class="card-content">
-              <span class="card-title activator grey-text text-darken-4">Markdown
-                <i class="material-icons right">more_vert</i>
-              </span>
-            </div>
-            <div class="card-reveal">
-              <span class="card-title grey-text text-darken-4">Markdown
-                <i class="material-icons right">cerrar</i>
-              </span>
-              <p>Es una herramienta usando Node.js, que lee y analiza archivos en formato Markdown, para verificar los links
-                que contengan y reportar algunas estadísticas.</p>
-              <p>
-                <a target="_blank" href="https://www.npmjs.com/package/md-links-leyla">This is a link</a>
-              </p>
+          </div>
+          <div class="col s12 m6 l4">
+            <div class="card">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="img/markdown.png">
+              </div>
+              <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4">Markdown
+                  <i class="material-icons right">more_vert</i>
+                </span>
+              </div>
+              <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4">Markdown
+                  <i class="material-icons right">cerrar</i>
+                </span>
+                <p>Es una herramienta usando Node.js, que lee y analiza archivos en formato Markdown, para verificar los links
+                  que contengan y reportar algunas estadísticas.</p>
+                <p>
+                  <a target="_blank" href="https://www.npmjs.com/package/md-links-leyla">This is a link</a>
+                </p>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </section>
     <section id="skills" class="section scrollspy">
-      <h2 class="title-card center-align">Skills</h2>
-      <hr class="center-align">
       <div class="container">
-        <div class="white hide-on-med-and-down">
-          <div class="col s6 m6 center-align">
+        <h2 class="title-card center-align">Skills</h2>
+        <hr class="center-align">
+        <div class="row">
+          <div class="col s12 center-align">
             <img src="img/html.png" alt="logoHTML" class="responsive-img imgSkills">
             <img src="img/js.png" alt="logoJS" class="responsive-img imgSkills">
             <img src="img/css.png" alt="logoCSS" class="responsive-img imgSkills">
@@ -167,38 +169,49 @@
             <img src="img/github.jpg" alt="logoCSS" class="responsive-img imgSkills">
           </div>
         </div>
+        <div class="row">
+          <div class="col s12 center-align">
+            <img src="img/LogoMakr_8PdQy8.png" alt="solf">
+          </div>
+        </div>
       </div>
 
     </section>
     <section id="contact" class="section scrollspy">
-      <h2 class="title-card center-align">Contáctame</h2>
-      <hr class="white center-align">
       <div class="container ">
-        <!-- <div class="white hide-on-med-and-down"> -->
-        <div class="col s6 m6 center-align">
-          <a href="https://www.linkedin.com/in/leyla-ticze/" target="_blank">
-            <img src="./img/icons8-linkedin-90.png" alt="linkdln" class="responsive-img imgSkills">
-          </a>
-          <a href="https://github.com/ticze" target="_blank">
-            <img src="./img/icons8-github-90.png" alt="github" class="responsive-img imgSkills">
-          </a>
-          <a href="mailto:l.ticze@gmail.com">
-            <img src="./img/icons8-gmail-90.png" alt="l.ticze@gmail.com" class="responsive-img imgSkills">
-          </a>
-          <a href="https://drive.google.com/file/d/1pFAcLBT3ntlEygBvK9GGXcmIYGlnaRfZ/view" target="_blank">
-            <img src="./img/cv.png" alt="curriculumv-itae" class="responsive-img imgSkills">
-          </a>
+        <h2 class="title-card center-align">Contáctame</h2>
+        <hr class="white center-align">
+        <div class="row">
+          <div class="col s12 center-align">
+            <a href="https://www.linkedin.com/in/leyla-ticze/" target="_blank">
+              <img src="./img/icons8-linkedin-90.png" alt="linkdln" class="responsive-img imgSkills">
+            </a>
+            <a href="https://github.com/ticze" target="_blank">
+              <img src="./img/icons8-github-90.png" alt="github" class="responsive-img imgSkills">
+            </a>
+            <a href="mailto:l.ticze@gmail.com">
+              <img src="./img/icons8-gmail-90.png" alt="l.ticze@gmail.com" class="responsive-img imgSkills">
+            </a>
+            <a href="https://drive.google.com/file/d/1pFAcLBT3ntlEygBvK9GGXcmIYGlnaRfZ/view" target="_blank">
+              <img src="./img/cv.png" alt="curriculumv-itae" class="responsive-img imgSkills">
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col s12 center-align">
+            <h4 class="center-align">Gmail: l.ticze@gmail.com / Celular : 972175264</h4>
+          </div>
         </div>
       </div>
     </section>
-  </div>
+    </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
-  <script src="call-materialize.js"></script>
-  <script src="main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+    <script src="call-materialize.js"></script>
+    <script src="main.js"></script>
 
 </body>
 
