correccion de about-me

--- a/index.html
+++ b/index.html
@@ -64,8 +64,10 @@
         <h2 class=" title-card center-align ">Sobre Mí</h2>
         <hr class="center-align">
         <div class="row center-align">
-          <div class="col s12">
-            <img src="./img/Leyla Ticze .jpg" alt="leyla" class="responsive-img col s12 m6 l3 ft-me">
+          <div class="col s12 l6 ft-me-container">
+            <img src="./img/Leyla Ticze .jpg" alt="leyla" class="responsive-img ft-me">
+          </div>
+          <div class="col s12 l6">
             <div class="card-panel red lighten-2 white-text">
               <h1 class="ml12 center-align">LEYLA TICZE </h1>
               <spam class="center-align info">
@@ -77,6 +79,8 @@
               </spam>
             </div>
           </div>
+        </div>
+      </div>
     </section>
     <section id="projects" class="section scrollspy">
       <div class="container">
@@ -180,7 +184,7 @@
     <section id="contact" class="section scrollspy">
       <div class="container ">
         <h2 class="title-card center-align">Contáctame</h2>
-        <hr class="white center-align">
+        <hr class="center-align">
         <div class="row">
           <div class="col s12 center-align">
             <a href="https://www.linkedin.com/in/leyla-ticze/" target="_blank">
@@ -204,14 +208,14 @@
         </div>
       </div>
     </section>
-    </div>
+  </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
-    <script src="call-materialize.js"></script>
-    <script src="main.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+  <script src="call-materialize.js"></script>
+  <script src="main.js"></script>
 
 </body>
 
