correccion de numero

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
   <title>Leyla Ticze</title>
 </head>
 
@@ -69,14 +70,14 @@
           </div>
           <div class="col s12 l6">
             <div class="card-panel red lighten-2 white-text">
-              <h1 class="ml12 center-align">LEYLA TICZE </h1>
-              <spam class="center-align info">
+              <h1 class="col s12 center-align animate infinite bounceOut">LEYLA TICZE </h1>
+              <span class="center-align info">
                 Egresada de Laboratoria.Front-end Developer, con experiencia en metodologías ágiles. Automotivada y con deseos de seguir
                 aprendiendo y mejorando.
                 <br> Soy muy curiosa, con habilidad resolutiva, gran apertura a las nuevas ideas y a adaptarme a grupos con diversas
                 características.
                 <br> Trabajo con: Javascrip, HTML, CSS, Angular.
-              </spam>
+              </span>
             </div>
           </div>
         </div>
@@ -90,7 +91,7 @@
           <div class="col s12 m6 l4">
             <div class="card">
               <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="img/data-dashboard.png">
+                <img class="activator" src="https://fotos.subefotos.com/918a30aaf31a3388852cf1fa4155885do.png">
               </div>
               <div class="card-content">
                 <span class="card-title activator grey-text text-darken-4">Data Dashboart
@@ -103,7 +104,7 @@
                 </span>
                 <p>Data Dashboard se encarga conocer el progreso de las estudiantes mediante el uso de la api de Laboratoria.</p>
                 <p>
-                  <a target="_blank" href="https://ticze.github.io/lim-2018-05-bc-core-am-datadashboard/src/">This is a link</a>
+                  <a target="_blank" href="https://ticze.github.io/lim-2018-05-bc-core-am-datadashboard/src/">Visita mi demo</a>
                 </p>
               </div>
             </div>
@@ -111,7 +112,7 @@
           <div class="col s12 m6 l4">
             <div class="card">
               <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="img/haven.png">
+                <img class="activator" src="https://fotos.subefotos.com/a5bc817467010a120a9a3c5ef0336707o.png">
               </div>
               <div class="card-content">
                 <span class="card-title activator grey-text text-darken-4">Haven
@@ -125,7 +126,7 @@
                 <p>Haven es una red social creada y enfocada para la comunidad Feminista ; donde puedes crear y postear frases
                   , las cuales se les puede dar votos continuos .</p>
                 <p>
-                  <a target="_blank" href="https://ticze.github.io/lim-2018-05-bc-core-am-socialnetwork/src/">This is a link</a>
+                  <a target="_blank" href="https://ticze.github.io/lim-2018-05-bc-core-am-socialnetwork/src/">Visita mi demo</a>
                 </p>
               </div>
             </div>
@@ -133,7 +134,7 @@
           <div class="col s12 m6 l4">
             <div class="card">
               <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="img/markdown.png">
+                <img class="activator" src="https://fotos.subefotos.com/2692ebdc5a1ebb55514020230a9c1ee7o.png">
               </div>
               <div class="card-content">
                 <span class="card-title activator grey-text text-darken-4">Markdown
@@ -147,7 +148,29 @@
                 <p>Es una herramienta usando Node.js, que lee y analiza archivos en formato Markdown, para verificar los links
                   que contengan y reportar algunas estadísticas.</p>
                 <p>
-                  <a target="_blank" href="https://www.npmjs.com/package/md-links-leyla">This is a link</a>
+                  <a target="_blank" href="https://www.npmjs.com/package/md-links-leyla">Visita mi demo</a>
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col s12 m6 l4">
+            <div class="card">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="https://fotos.subefotos.com/1f63cbfcdf12d6d9b2a9170a5f8cf978o.png">
+              </div>
+              <div class="card-content">
+                <span class="card-title activator grey-text text-darken-4">Registro
+                  <i class="material-icons right">more_vert</i>
+                </span>
+              </div>
+              <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4">Registro
+                  <i class="material-icons right">cerrar</i>
+                </span>
+                <p>Es una herramienta usando Node.js, que lee y analiza archivos en formato Markdown, para verificar los links
+                  que contengan y reportar algunas estadísticas.</p>
+                <p>
+                  <a target="_blank" href="https://ticze.github.io/lim2018-01-you-work/src/index.html">Visita mi demo</a>
                 </p>
               </div>
             </div>
@@ -175,7 +198,7 @@
         </div>
         <div class="row">
           <div class="col s12 center-align">
-            <img src="img/LogoMakr_8PdQy8.png" alt="solf">
+            <img class="col s12 center-align" src="img/LogoMakr_8PdQy8.png" alt="solf">
           </div>
         </div>
       </div>
@@ -196,7 +219,7 @@
             <a href="mailto:l.ticze@gmail.com">
               <img src="./img/icons8-gmail-90.png" alt="l.ticze@gmail.com" class="responsive-img imgSkills">
             </a>
-            <a href="https://drive.google.com/file/d/1pFAcLBT3ntlEygBvK9GGXcmIYGlnaRfZ/view" target="_blank">
+            <a href="https://drive.google.com/open?id=1qHzbM6OmJ-r9wMmh0l54a_IZ_O6ernqT" target="_blank">
               <img src="./img/cv.png" alt="curriculumv-itae" class="responsive-img imgSkills">
             </a>
           </div>
