correccion de boton cerrar  cards / contenido a registro

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               </div>
               <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4">Data Dashboart
-                  <i class="material-icons right">cerrar</i>
+                  <i class="material-icons right">close</i>
                 </span>
                 <p>Data Dashboard se encarga conocer el progreso de las estudiantes mediante el uso de la api de Laboratoria.</p>
                 <p>
@@ -121,7 +121,7 @@
               </div>
               <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4">Haven
-                  <i class="material-icons right">cerrar</i>
+                  <i class="material-icons right">close</i>
                 </span>
                 <p>Haven es una red social creada y enfocada para la comunidad Feminista ; donde puedes crear y postear frases
                   , las cuales se les puede dar votos continuos .</p>
@@ -143,7 +143,7 @@
               </div>
               <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4">Markdown
-                  <i class="material-icons right">cerrar</i>
+                  <i class="material-icons right">close</i>
                 </span>
                 <p>Es una herramienta usando Node.js, que lee y analiza archivos en formato Markdown, para verificar los links
                   que contengan y reportar algunas estadísticas.</p>
@@ -165,10 +165,9 @@
               </div>
               <div class="card-reveal">
                 <span class="card-title grey-text text-darken-4">Registro
-                  <i class="material-icons right">cerrar</i>
+                  <i class="material-icons right">close</i>
                 </span>
-                <p>Es una herramienta usando Node.js, que lee y analiza archivos en formato Markdown, para verificar los links
-                  que contengan y reportar algunas estadísticas.</p>
+                <p>Registro es una plataforma para mejor la recepción en lugares como coworking , donde permite al visitante llenar sus datos los cuales serán enviados como correo electrónico a la persona a quien viene a visitar.</p>
                 <p>
                   <a target="_blank" href="https://ticze.github.io/lim2018-01-you-work/src/index.html">Visita mi demo</a>
                 </p>
